lots of fixes and features
